# todo-api

./: .coveragerc  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
api/: config.py  main.py
api/configs/: settings.toml
api/security/: jwt-bearer.py
api/tests/: tests_main.py  tests_utils.py
api/user/data/: user.py  users.py
api/user/models/: users.py
api/users/models/: users.py
api/users/routers/: business_rules.py  users.py
api/users/tests/: test_get_all_users.py  test_get_user_detail.py  test_users_update.py  tests_insert_new_user.py
api/utils/: pydantic_oid.py
