[tool.poetry]
name = "todo-api"
version = "0.1.0"
description = "A simple Todo List API"
authors = ["Vicente Marçal <vicente.marcal@gmail.com>"]
license = "GPLv3+"

[tool.poetry.dependencies]
python = "3.9.7"
fastapi = "^0.68.1"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
mongoengine = "^0.23.1"
fastapi-jwt-auth = "^0.5.0"
dynaconf = "^3.1.7"
dnspython = "^2.1.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
pytest = "^6.2.5"
requests = "^2.26.0"
pytest-cov = "^2.12.1"
codecov = "^2.1.12"

[tool.pytest.ini_options]
python_files = [
    "test*.py",
    "*tests.py",
]
minversion = "6.0"
addopts = "-ra -q -v"
testpaths = [
    "api/tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
